--- a/recette.css
+++ b/recette.css
@@ -24,9 +24,9 @@ p.categorie {
 
 div.contenu {
     background-color: white;
-    margin: 60px 10% 80px 10%;
-    padding: 0px 30px 30px 30px;
-    min-width: 350px;
+    margin: 40px 8px 40px 8px;
+    padding: 0px 8px 20px 8px;
+    /*min-width: 350px;*/
     box-shadow: 0px 0px 8px 8px rgba(0, 0, 0, 0.1);
     overflow: visible;
 }
@@ -68,19 +68,19 @@ table.info{
     width: 100%;
     color: white;
     background-color: #6C829DC0;
-    height: 80px;
+    height: 50px;
 }
 
 table.info td {
-   text-align: center;
-   font-size: 14px;
-   vertical-align: top;
+    text-align: center;
+    font-size: 12px;
+    vertical-align: top;
 }
 
 table.info th {
-   font-size: 16px;
-   vertical-align: bottom;
-   padding-bottom: 8px;
+    font-size: 14px;
+    vertical-align: bottom;
+    padding-bottom: 8px;
 }
 img.info{
     display: block;
@@ -91,7 +91,7 @@ img.info{
 }
 
 div.colonne {
-    width: 45%;
+    width: 100%;
     margin-top: 20px;
 }
 div.colonne h2{
@@ -104,11 +104,6 @@ div.colonne h2{
 
 div.colonne1 {
     display: inline-block;
-    margin-right: 10%;
-}
-
-div.colonne2 {
-    float: right;
 }
 
 div.ingredients p{
@@ -147,3 +142,44 @@ table.preparation tr {
     height: 40px;
 }
 
+/* mode ordi */
+@media only screen and (min-width: 768px) {
+    div.contenu {
+        min-width: 350px;
+        margin: 60px 10% 80px 10%;
+        padding: 0px 30px 30px 30px;
+    }
+
+    table.info {
+        height: 80px;
+    }
+    
+    table.info td {
+        font-size: 14px;
+    }
+    
+    table.info th {
+        font-size: 16px;
+    }
+
+    div.colonne {
+        width: 45%;
+    }
+
+    div.colonne1 {
+        margin-right: 10%;
+    }
+    
+    div.colonne2 {
+        float: right;
+    }
+}
+
+@media only screen and (min-width: 900px) {
+    div.contenu {
+        min-width: 645px;
+        margin-left: auto;
+        margin-right: auto;
+
+    }
+}
